--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "inquirer": "^8.2.4",
+        "mysql": "2.18.1",
         "mysql2": "^3.9.2"
     }
 }
